Update mingw workflow.
Signed-off-by: andreidanila1 <andrei.danila@analog.com>

--- a/.github/workflows/mingwbuild.yml
+++ b/.github/workflows/mingwbuild.yml
@@ -19,9 +19,6 @@ jobs:
           fetch-depth: 0
           path: package
 
-      - name: Set Repository Name
-        run: echo "REPO_NAME=${{ github.event.repository.name }}" >> $GITHUB_ENV
-
       - name: Clone Scopy Repository
         uses: actions/checkout@v4
         with:
@@ -64,15 +61,15 @@ jobs:
               cd /home/docker/scopy/tools/packagegenerator &&
               pip3 install -r requirements.txt &&
               python3 ./package_generator.py -h &&
-              mkdir -p /home/docker/scopy/packages/%REPO_NAME% &&
-              cp -r /home/docker/scopy/package/* /home/docker/scopy/packages/%REPO_NAME%/ &&
+              mkdir -p /home/docker/scopy/packages/%GITHUB_REPO_NAME% &&
+              cp -r /home/docker/scopy/package/* /home/docker/scopy/packages/%GITHUB_REPO_NAME%/ &&
               cd /home/docker/scopy &&
               mkdir -p build && cd build &&
-              cmake .. -G "MinGW Makefiles" -DCMAKE_PREFIX_PATH=C:/Qt/5.15.2/mingw81_64/lib/cmake/Qt5 &&
+              cmake .. -G "MinGW Makefiles" &&
               mingw32-make -j$(nproc) &&
-              cp -r /home/docker/scopy/packages/%REPO_NAME% /home/docker/artifact_x86_64 || echo "Package directory not found!" &&
+              cp -r /home/docker/scopy/packages/%GITHUB_REPO_NAME% /home/docker/artifact_x86_64 || echo "Package directory not found!" &&
               cd /home/docker/scopy/tools/packagegenerator &&
-              python3 ./package_generator.py -a --src=/home/docker/artifact_x86_64/%REPO_NAME% --dest=/home/docker/artifact_x86_64'
+              python3 ./package_generator.py -a --src=/home/docker/artifact_x86_64/%GITHUB_REPO_NAME% --dest=/home/docker/artifact_x86_64'
 
       - name: Set short git commit SHA
         shell: bash
