--- a/.github/workflows/mingwbuild.yml
+++ b/.github/workflows/mingwbuild.yml
@@ -58,19 +58,7 @@ jobs:
                 -e GITHUB_JOB=%GITHUB_JOB% ^
                 -e RUNNER_ARCH=%RUNNER_ARCH% ^
                 -e CI_SCRIPT=ON ^
-                cristianbindea/scopy2-mingw64:testing C:\msys64\usr\bin\bash.exe -c "\
-                  cd /home/docker/scopy/tools/packagegenerator && \
-                  pip3 install -r requirements.txt && \
-                  python3 ./package_generator.py -h && \
-                  mkdir -p /home/docker/scopy/packages/\${GITHUB_REPOSITORY} && \
-                  cp -r /home/docker/scopy/package/* /home/docker/scopy/packages/\${GITHUB_REPOSITORY}/ && \
-                  cd /home/docker/scopy && \
-                  mkdir -p build && cd build && \
-                  cmake .. -G "MinGW Makefiles" && \
-                  mingw32-make -j$(nproc) && \
-                  cp -r /home/docker/scopy/packages/\${GITHUB_REPOSITORY} /home/docker/artifact_x86_64 || echo "Package directory not found!" && \
-                  cd /home/docker/scopy/tools/packagegenerator && \
-                  python3 ./package_generator.py -a --src=/home/docker/artifact_x86_64/\${GITHUB_REPOSITORY} --dest=/home/docker/artifact_x86_64"
+                cristianbindea/scopy2-mingw64:testing C:\msys64\usr\bin\bash.exe -c "${GITHUB_WORKSPACE}\scripts\build_mingw_pkg.sh"
 
       - name: Set short git commit SHA
         shell: bash
