--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -53,23 +53,23 @@ stages:
       clean: true
     - script: ./ci/macOS/install_macos_deps.sh
       displayName: 'Build and Install Dependencies'
-      workingDirectory: $(Build.Repository.LocalPath)/scopy
+      workingDirectory: $(Build.SourcesDirectory)/scopy
     - script: |
             pip3 install -r requirements.txt
             python3 ./package_generator.py -h
       displayName: 'Check package generator and install dependencies'
-      workingDirectory: $(Build.Repository.LocalPath)/scopy/tools/packagegenerator 
+      workingDirectory: $(Build.SourcesDirectory)/scopy/tools/packagegenerator 
     - script: |
             mkdir -p scopy/packages/$(REPO_SLUG)
             cp -r package/* scopy/packages/$(REPO_SLUG)/
       displayName: 'Copy $(REPO_SLUG) to Scopy'
-      workingDirectory: $(Build.Repository.LocalPath)
+      workingDirectory: $(Build.SourcesDirectory)
     - script: |
             export BUILD_HOST="$(vmImage)"
             export ACCOUNT_NAME=`echo $(resources.repositories.scopy.name) | awk -F "/" '{print $1}'`
             export PROJECT_NAME=`echo $(resources.repositories.scopy.name) | awk -F "/" '{print $2}'`
             export USERNAME="azure-pipelines"
-            export BUILD_REPO_URL=$(Build.Repository.Uri)
+            export BUILD_REPO_URL=$(resources.repositories.scopy.url)
             export RUN_ID=$(Build.BuildId)
             export RUN_NUMBER=$(Build.BuildNumber)
             export JOB_ID=$(System.JobId)
@@ -78,11 +78,11 @@ stages:
             export MACOSX_DEPLOYMENT_TARGET=11.0
             ./scripts/build_macos_pkg.sh
       displayName: 'Build Scopy'
-      workingDirectory: $(Build.Repository.LocalPath)/package
+      workingDirectory: $(Build.Repository.LocalPath)
     - script: |
-            ./package_generator.py -a --src=$(Build.Repository.LocalPath)/scopy/build/packages/$(REPO_SLUG) --dest=$(Build.ArtifactStagingDirectory)
+            ./package_generator.py -a --src=$(Build.SourcesDirectory)/scopy/build/packages/$(REPO_SLUG) --dest=$(Build.ArtifactStagingDirectory)
       displayName: 'Create package zip'
-      workingDirectory: $(Build.Repository.LocalPath)/scopy/tools/packagegenerator
+      workingDirectory: $(Build.SourcesDirectory)/scopy/tools/packagegenerator
     - task: GithubRelease@1
       displayName: 'Push to continuous release'
       condition: and(succeeded(), and(ne(variables['Build.Reason'], 'PullRequest'), eq(variables['Build.SourceBranch'], 'refs/heads/master')))
