--- a/.github/workflows/mingwbuild.yml
+++ b/.github/workflows/mingwbuild.yml
@@ -63,7 +63,11 @@ jobs:
       - name: Set short git commit SHA
         shell: bash
         run: echo "commit_sha=$(git rev-parse --short ${{ github.sha }})" >> "$GITHUB_ENV"
-
+        
+      - name: Set REPO_NAME env var
+        shell: bash
+        run: echo "REPO_NAME=$(basename $GITHUB_REPOSITORY)" >> "$GITHUB_ENV"
+        
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
